Fix white space wrapping for vault size on main screen

--- a/app/components/VaultList.css
+++ b/app/components/VaultList.css
@@ -176,6 +176,7 @@
   width: 80px;
   position: absolute;
   bottom: 10px;
+  white-space: nowrap;
 }
 
 .vault-status-syncing {
